// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SpeedLossOverviewDialog > renders correctly - mobile 1`] = `
<div
  data-v-35dde64a=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-35dde64a=""
    iconcolor="lw-yellow"
    title="Speed loss overview"
    titleicon="M12 16C13.66 16 15 14.66 15 13C15 11.88 14.39 10.9 13.5 10.39L3.79 4.77L9.32 14.35C9.82 15.33 10.83 16 12 16M12 3C10.19 3 8.5 3.5 7.03 4.32L9.13 5.53C10 5.19 11 5 12 5C16.42 5 20 8.58 20 13C20 15.21 19.11 17.21 17.66 18.65H17.65C17.26 19.04 17.26 19.67 17.65 20.06C18.04 20.45 18.68 20.45 19.07 20.07C20.88 18.26 22 15.76 22 13C22 7.5 17.5 3 12 3M2 13C2 15.76 3.12 18.26 4.93 20.07C5.32 20.45 5.95 20.45 6.34 20.06C6.73 19.67 6.73 19.04 6.34 18.65C4.89 17.2 4 15.21 4 13C4 12 4.19 11 4.54 10.1L3.33 8C2.5 9.5 2 11.18 2 13Z"
  />
  <v-card-text-stub
    class="py-0"
    data-v-35dde64a=""
    tag="div"
  >
    <generic-tabs-row-stub
      class="mb-2"
      color=""
      countfunc="[Function]"
      data-v-35dde64a=""
      disabledrulefunc="[Function]"
      grow="false"
      height="48"
      items="[object Object],[object Object]"
      labelkey="name"
      modelvalue="0"
      notclickable="false"
      sizeclass=""
      tabnamefn="[Function]"
    />
    <shiftview-cards-list-stub
      additionallineprops="[object Object]"
      bordercolorkey="[Function]"
      class="card-list mx-n4 px-4 align-content-start card-list--mobile"
      data-v-35dde64a=""
      dense="true"
      disabled="false"
      iconcolorfn="[Function]"
      iconfn="[Function]"
      items="[object Object]"
      primaryactionicon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      primaryactiontext=""
      primaryactiontooltip=""
      secondaryactionicon=""
      secondaryactiontooltip=""
      subtitleitemsprops="[object Object],[object Object],[object Object],[object Object]"
      tertiaryactionicon=""
      tertiaryactiontooltip=""
      titleiconfn="[Function]"
      titletextkey="[Function]"
      verticalsubtitle="false"
    />
  </v-card-text-stub>
  <v-card-actions-stub
    class="justify-end"
    data-v-35dde64a=""
    tag="div"
  >
    <evocon-v-button-stub
      color=""
      data-v-35dde64a=""
      icon=""
      iconcolor=""
      id="overview-close-btn"
      text="Close"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`SpeedLossOverviewDialog > renders correctly - read only 1`] = `
<div
  data-v-35dde64a=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-35dde64a=""
    iconcolor="lw-yellow"
    title="Speed loss overview"
    titleicon="M12 16C13.66 16 15 14.66 15 13C15 11.88 14.39 10.9 13.5 10.39L3.79 4.77L9.32 14.35C9.82 15.33 10.83 16 12 16M12 3C10.19 3 8.5 3.5 7.03 4.32L9.13 5.53C10 5.19 11 5 12 5C16.42 5 20 8.58 20 13C20 15.21 19.11 17.21 17.66 18.65H17.65C17.26 19.04 17.26 19.67 17.65 20.06C18.04 20.45 18.68 20.45 19.07 20.07C20.88 18.26 22 15.76 22 13C22 7.5 17.5 3 12 3M2 13C2 15.76 3.12 18.26 4.93 20.07C5.32 20.45 5.95 20.45 6.34 20.06C6.73 19.67 6.73 19.04 6.34 18.65C4.89 17.2 4 15.21 4 13C4 12 4.19 11 4.54 10.1L3.33 8C2.5 9.5 2 11.18 2 13Z"
  />
  <v-card-text-stub
    class="py-0"
    data-v-35dde64a=""
    tag="div"
  >
    <generic-tabs-row-stub
      class="mb-2"
      color=""
      countfunc="[Function]"
      data-v-35dde64a=""
      disabledrulefunc="[Function]"
      grow="false"
      height="48"
      items="[object Object],[object Object]"
      labelkey="name"
      modelvalue="0"
      notclickable="false"
      sizeclass=""
      tabnamefn="[Function]"
    />
    <shiftview-cards-list-stub
      additionallineprops="[object Object]"
      bordercolorkey="[Function]"
      class="card-list mx-n4 px-4 align-content-start"
      data-v-35dde64a=""
      dense="false"
      disabled="true"
      iconcolorfn="[Function]"
      iconfn="[Function]"
      items="[object Object]"
      primaryactionicon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      primaryactiontext=""
      primaryactiontooltip=""
      secondaryactionicon=""
      secondaryactiontooltip=""
      subtitleitemsprops="[object Object],[object Object],[object Object],[object Object]"
      tertiaryactionicon=""
      tertiaryactiontooltip=""
      titleiconfn="[Function]"
      titletextkey="[Function]"
      verticalsubtitle="false"
    />
  </v-card-text-stub>
  <v-card-actions-stub
    class="justify-end"
    data-v-35dde64a=""
    tag="div"
  >
    <evocon-v-button-stub
      color=""
      data-v-35dde64a=""
      icon=""
      iconcolor=""
      id="overview-close-btn"
      text="Close"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`SpeedLossOverviewDialog > renders correctly - tab 0 1`] = `
<div
  data-v-35dde64a=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-35dde64a=""
    iconcolor="lw-yellow"
    title="Speed loss overview"
    titleicon="M12 16C13.66 16 15 14.66 15 13C15 11.88 14.39 10.9 13.5 10.39L3.79 4.77L9.32 14.35C9.82 15.33 10.83 16 12 16M12 3C10.19 3 8.5 3.5 7.03 4.32L9.13 5.53C10 5.19 11 5 12 5C16.42 5 20 8.58 20 13C20 15.21 19.11 17.21 17.66 18.65H17.65C17.26 19.04 17.26 19.67 17.65 20.06C18.04 20.45 18.68 20.45 19.07 20.07C20.88 18.26 22 15.76 22 13C22 7.5 17.5 3 12 3M2 13C2 15.76 3.12 18.26 4.93 20.07C5.32 20.45 5.95 20.45 6.34 20.06C6.73 19.67 6.73 19.04 6.34 18.65C4.89 17.2 4 15.21 4 13C4 12 4.19 11 4.54 10.1L3.33 8C2.5 9.5 2 11.18 2 13Z"
  />
  <v-card-text-stub
    class="py-0"
    data-v-35dde64a=""
    tag="div"
  >
    <generic-tabs-row-stub
      class="mb-2"
      color=""
      countfunc="[Function]"
      data-v-35dde64a=""
      disabledrulefunc="[Function]"
      grow="false"
      height="48"
      items="[object Object],[object Object]"
      labelkey="name"
      modelvalue="0"
      notclickable="false"
      sizeclass=""
      tabnamefn="[Function]"
    />
    <shiftview-cards-list-stub
      additionallineprops="[object Object]"
      bordercolorkey="[Function]"
      class="card-list mx-n4 px-4 align-content-start"
      data-v-35dde64a=""
      dense="false"
      disabled="false"
      iconcolorfn="[Function]"
      iconfn="[Function]"
      items="[object Object]"
      primaryactionicon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      primaryactiontext=""
      primaryactiontooltip=""
      secondaryactionicon=""
      secondaryactiontooltip=""
      subtitleitemsprops="[object Object],[object Object],[object Object],[object Object]"
      tertiaryactionicon=""
      tertiaryactiontooltip=""
      titleiconfn="[Function]"
      titletextkey="[Function]"
      verticalsubtitle="false"
    />
  </v-card-text-stub>
  <v-card-actions-stub
    class="justify-end"
    data-v-35dde64a=""
    tag="div"
  >
    <evocon-v-button-stub
      color=""
      data-v-35dde64a=""
      icon=""
      iconcolor=""
      id="overview-close-btn"
      text="Close"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;

exports[`SpeedLossOverviewDialog > renders correctly - tab 1 1`] = `
<div
  data-v-35dde64a=""
>
  <dialog-toolbar-stub
    color="white"
    data-v-35dde64a=""
    iconcolor="lw-yellow"
    title="Speed loss overview"
    titleicon="M12 16C13.66 16 15 14.66 15 13C15 11.88 14.39 10.9 13.5 10.39L3.79 4.77L9.32 14.35C9.82 15.33 10.83 16 12 16M12 3C10.19 3 8.5 3.5 7.03 4.32L9.13 5.53C10 5.19 11 5 12 5C16.42 5 20 8.58 20 13C20 15.21 19.11 17.21 17.66 18.65H17.65C17.26 19.04 17.26 19.67 17.65 20.06C18.04 20.45 18.68 20.45 19.07 20.07C20.88 18.26 22 15.76 22 13C22 7.5 17.5 3 12 3M2 13C2 15.76 3.12 18.26 4.93 20.07C5.32 20.45 5.95 20.45 6.34 20.06C6.73 19.67 6.73 19.04 6.34 18.65C4.89 17.2 4 15.21 4 13C4 12 4.19 11 4.54 10.1L3.33 8C2.5 9.5 2 11.18 2 13Z"
  />
  <v-card-text-stub
    class="py-0"
    data-v-35dde64a=""
    tag="div"
  >
    <generic-tabs-row-stub
      class="mb-2"
      color=""
      countfunc="[Function]"
      data-v-35dde64a=""
      disabledrulefunc="[Function]"
      grow="false"
      height="48"
      items="[object Object],[object Object]"
      labelkey="name"
      modelvalue="1"
      notclickable="false"
      sizeclass=""
      tabnamefn="[Function]"
    />
    <shiftview-cards-list-stub
      additionallineprops="[object Object]"
      bordercolorkey="[Function]"
      class="card-list mx-n4 px-4 align-content-start"
      data-v-35dde64a=""
      dense="false"
      disabled="false"
      iconcolorfn="[Function]"
      iconfn="[Function]"
      items="[object Object],[object Object]"
      primaryactionicon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      primaryactiontext=""
      primaryactiontooltip=""
      secondaryactionicon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
      secondaryactiontooltip=""
      subtitleitemsprops="[object Object],[object Object],[object Object],[object Object]"
      tertiaryactionicon=""
      tertiaryactiontooltip=""
      titleiconfn="[Function]"
      titletextkey="[Function]"
      verticalsubtitle="false"
    />
  </v-card-text-stub>
  <v-card-actions-stub
    class="justify-end"
    data-v-35dde64a=""
    tag="div"
  >
    <evocon-v-button-stub
      color=""
      data-v-35dde64a=""
      icon=""
      iconcolor=""
      id="overview-close-btn"
      text="Close"
      textclass=""
      type="secondary"
    />
  </v-card-actions-stub>
</div>
`;
